fix spacings

--- a/src/common/styles/_helpers.scss
+++ b/src/common/styles/_helpers.scss
@@ -15,7 +15,7 @@
 }
 
 .show-mobile {
-  display: block;
+  display: flex;
 }
 
 .show-desktop {
