--- a/src/common/styles/main.scss
+++ b/src/common/styles/main.scss
@@ -44,12 +44,15 @@ main {
     }
   }
 
-  #conectors{
-    h4{
+  #conectors {
+    h3 {
+      margin-bottom: 0.5rem;
+    }
+    h4 {
       text-align: center;
       color: $green;
       font-size: 0.6rem;
-      margin-bottom: 1rem;
+      margin: 0.5rem 0;
     }
   }
 
@@ -61,7 +64,7 @@ main {
   }
 
   p {
-    margin-top: 1rem;
+    margin: 0.5rem 0;
     text-align: justify;
   }
 }
@@ -83,18 +86,6 @@ main {
       }
     }
 
-    #second {
-      background-image: url("../img/bg-02.png");
-      background-position: center;
-      background-size: cover;
-
-      .text {
-        p {
-          margin-top: 3rem;
-        }
-      }
-    }
-
     #third {
       margin-top: 0;
 
@@ -105,11 +96,26 @@ main {
       }
     }
 
+    #conectors {
+      h3 {
+        margin-bottom: 1rem;
+      }
+
+      h4 {
+        font-size: 0.8rem;
+      }
+    }
+
     #first,
     #second,
     #third,
     #conectors {
       padding: 2rem 5rem;
+    }
+
+    p {
+      margin-top: 1rem;
+      margin-bottom: 0;
     }
   }
 }
